[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bench]]
name = "fibonacci"
harness = false

[dependencies]
code_reload = { path = "../src/crates/code_reload" }
criterion = "0.7.0"

[build-dependencies]
code_reload = { path = "../src/crates/code_reload" }