[workspace]
resolver = "3"
members = [
    "crates/code_reload",
    "crates/code_reload_build",
    "crates/code_reload_core",
    "crates/code_reload_proc_macro",
    "integration_tests/broken_runtime",
    "integration_tests/default",
    "integration_tests/runtime"
]

[workspace.dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.1"
syn = { version = "2.0.104", features = ["full"] }

memchr = "2.7.6"
memmap2 = "0.9.9"

libloading = "0.8.8"
notify = "8.2.0"
