[workspace]
resolver = "3"
members = [
    "code_reload",
    "code_reload_build",
    "code_reload_core",
    "code_reload_proc_macro",
]

[workspace.dependencies]
# TODO - is there a way to specify this versions only in one place? or this is meaningless?
code_reload_build = { version = "0.1.1", path = "code_reload_build" }
code_reload_core = { version = "0.1.1", path = "code_reload_core" }
code_reload_proc_macro = { version = "0.1.1", path = "code_reload_proc_macro" }

proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.12.2"
syn = { version = "2.0.104", features = ["full"] }

memchr = "2.7.6"
memmap2 = "0.9.9"

libloading = "0.8.8"
notify = "8.2.0"
mockall = "0.14.0"