[package]
name = "code_reload_build"
version = "0.1.2"
edition = "2024"
description = "Everything related to `build.rs` and runtime."
license = "MIT"
homepage = "https://github.com/alordash/code_reload"
repository = "https://github.com/alordash/code_reload"
readme = "README.md"

[lib]
name = "code_reload_build"

[[bin]]
name = "code_reload_build_bintest"
path = "bin/main.rs"

[dependencies]
code_reload_core = { workspace = true }

memchr = { workspace = true }
memmap2 = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }

libloading = { workspace = true }
notify = { workspace = true }