[package]
name = "code_reload_core"
version = "0.1.2"
edition = "2024"
description = "Common stuff for code_reload."
license = "MIT"
homepage = "https://github.com/alordash/code_reload"
repository = "https://github.com/alordash/code_reload"
readme = "README.md"

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

libloading = { workspace = true }