[package]
name = "code_reload_proc_macro"
version = "0.1.0"
edition = "2018"

[lib]
name = "code_reload_proc_macro"
proc-macro = true

[[bin]]
name = "code_reload_proc_macro_bintest"
path = "bin/main.rs"

[dependencies]
code_reload_core = { workspace = true }

proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
libloading = { workspace = true }