[package]
name = "code_reload_proc_macro"
version = "0.0.0"
edition = "2018"

[lib]
name = "code_reload_proc_macro"
proc-macro = true

[[bin]]
name = "code_reload_proc_macro_bintest"
path = "bin/main.rs"

[dependencies]
code_reload_core = { path = "../code_reload_core" }

proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
syn = { workspace = true, features = ["full"] }

[dev-dependencies]
libloading = { workspace = true }